# 98-tstlocal

./: .env.example  .gga  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  database.py  indicators.py  ingest.py  main.py  market.py  schemas.py  settings.py  store.py
app/routers/: __init__.py  indicators.py
openspec/: config.yaml
openspec/changes/app-settings/: proposal.md
openspec/changes/archive/2026-06-09-chart-visualization/: archive-report.md  exploration.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-market-data-ingestion/: proposal.md  tasks.md
openspec/changes/archive/2026-06-10-auto-load-symbol-chart/: archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-10-infinite-scroll-chart/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/app-settings/: archive-report.md  design.md  tasks.md
openspec/changes/fastapi-skeleton/: design.md  tasks.md
openspec/changes/frontend-crud-forms/: proposal.md
openspec/changes/market-data-ingestion/: design.md
openspec/changes/persistence-sqlite/: design.md  exploration.md
openspec/changes/strategy-crud/: proposal.md
openspec/changes/strategy-search/: tasks.md
openspec/changes/strategy-update/: tasks.md
openspec/changes/technical-analysis-backtesting/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/specs/dark-mode/: spec.md
openspec/specs/frontend/: spec.md
openspec/specs/market-chart/: spec.md
openspec/specs/python-toolchain/: spec.md
openspec/specs/trading-domain/: spec.md
static/css/: app.css
static/js/: chart-indicators.js  chart.js
templates/: base.html  index.html
templates/indicators/: config_form.html  panel.html  row.html
templates/market/: chart.html
templates/strategies/: form.html  form_page.html  list.html  table.html
tests/: conftest.py  test_chart.py  test_chart_e2e.py  test_health.py  test_indicators.py  test_indicators_api.py  test_market.py  test_pages.py  test_settings.py  test_smoke.py  test_strategies.py
tests/e2e/: test_indicators.py
(+66 files in other folders)
