[project]
name = "98-tstlocal"
version = "0.1.0"
description = "FastAPI trading app — strict Python toolchain bootstrapped before application code."
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.1",
    "ruff~=0.15.16",
    "mypy~=2.1.0",
    "pre-commit~=4.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
